--- a/secrets.Rmd
+++ b/secrets.Rmd
@@ -11,4 +11,4 @@ knitr::opts_chunk$set(echo = TRUE)
 
 This is a vignette to play with working with secrets. 
 
-We will demo creation of a new gh action with a secret. Adding content to test PR!
+We will demo creation of a new gh action with a secret. Adding content to test PR! and another attempt!
