--- a/docs/package-ci.Rmd
+++ b/docs/package-ci.Rmd
@@ -2,7 +2,9 @@
 title: "package-ci"
 author: "Murray Cadzow"
 date: "12/12/2019"
-output: html_document
+output: 
+ html_document:
+   toc: yes
 ---
 
 ```{r setup, include=FALSE}
@@ -21,44 +23,30 @@ devtools::install_github("r-lib/usethis")
 ```
 
 
-## Package setup
+## Package setup and connect with Github
 
+### New project, Github first
 
+Follow instructions https://happygitwithr.com/new-github-first.html#new-github-first
 
-create a package
+Create a package
 ```{r}
-usethis::create_package()
+usethis::create_package(path = "packagename")
 ```
 
-initialise git repository
-```{r}
-usethis::use_git()
-```
+### Existing package with github
 
-- create a blank repository on github
+Make sure that you have github setup with your package.
 
-add the github remote
-```{r}
-usethis::use_github("username/repo")
-```
+[Existing project and package, github first](https://happygitwithr.com/existing-github-first.html#existing-github-first)
+[Existing project and package, github last](https://happygitwithr.com/existing-github-last.html#existing-github-last)
 
-create a readme
-```{r}
-usethis::use_readme_md()
-```
-
-create a licence
-```{r}
-# use of MIT licence
-use_mit_license()
-```
-
-
+## Add github action for release-check
 
 Fill in the description with the github urls
 ```{r}
 usethis::use_github_links()
-use_github_action()
+usethis::use_github_actions()
 ```
 
 This creates the required files for using the github action that runs devtools::check() on github and includes a badge in your readme
