--- a/github-actions-yaml-description.Rmd
+++ b/github-actions-yaml-description.Rmd
@@ -1,11 +1,6 @@
----
-title: "Github actions yaml description"
-author: "David Neuzerling"
-date: "12/12/2019"
-output: html_document
----
 
-```{r setup, include=FALSE}
+
+```{r setup3, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE, eval = FALSE)
 ```
 
