--- a/testing_with_renv.Rmd
+++ b/testing_with_renv.Rmd
@@ -49,3 +49,46 @@ There are a few differences with this workflow:
 
 On Ubuntu, packages are installed from source. This is **much** slower; on one of my packages, testing in a reproducible environment on Ubuntu takes 35 minutes, as opposed to 4 minutes. Caching can make life easier, so let's take a look at that now.
 
+The idea behind caching is to record our installed R packages so that, for future runs, we can have them readily available instead of installing from source. In one of my packages, caching decreased testing time from 35 minutes to 4 minutes. GitHub caches last a week, so if you push commits infrequently you may not realise the benefits of caching.
+
+We implement caching by adding two steps to the above YAML:
+
+* We install and use the `remotes` package to determine the packages that our repository depends upon.
+* We cache our R libraries folder, given by the `R_LIBS_USER` environment variable, using the hash of the dependencies as the cache key. If the package dependencies change, so too does the hash, and our cache becomes invalid.
+
+There's a third step that GitHub handles automatically --- before the job is complete, the cache is created and our installed packages are stored. On future runs, the cache is unpacked. R will see that the packages are installed and won't install them again from source.
+
+You can read more about caching in GitHub actions in the [official documentation](https://github.com/actions/cache). An example yaml file is given below:
+
+```
+on: [push, pull_request]
+
+name: R-CMD-check
+
+jobs:
+  R-CMD-check:
+    runs-on: ubuntu-18.04
+    steps:
+      - uses: actions/checkout@v1
+      - uses: r-lib/actions/setup-r@master
+        with:
+            r-version: '3.6.1'
+      - name: Install libcurl
+        run: sudo apt-get install libcurl4-openssl-dev
+      - name: Query dependencies
+        run: Rscript -e "install.packages('remotes')" -e "saveRDS(remotes::dev_package_deps(dependencies = TRUE), 'depends.Rds')"
+      - name: Cache R packages
+        if: runner.os != 'Windows'
+        uses: actions/cache@v1
+        with:
+          path: ${{ env.R_LIBS_USER }}
+          key: ${{ runner.os }}-r-3.6.1-${{ hashFiles('depends.Rds') }}
+          restore-keys: ${{ runner.os }}-r-3.6.1-
+      - name: Install renv 0.9.2
+        run: Rscript -e "install.packages('https://cran.r-project.org/src/contrib/renv_0.9.2.tar.gz', repos = NULL, type = 'source')"
+      - name: Install rcmdcheck 1.3.3
+        run: Rscript -e "install.packages('https://cran.r-project.org/src/contrib/rcmdcheck_1.3.3.tar.gz', repos = NULL, type = 'source')"
+      - name: Check
+        run: Rscript -e "renv::restore();rcmdcheck::rcmdcheck(args = '--no-manual', error_on = 'error')"
+```
+
