--- a/understanding_yaml.Rmd
+++ b/understanding_yaml.Rmd
@@ -1,10 +1,8 @@
-# Adding messages to issues and pull requests
+# So what's actually going on in the yaml file?
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE, eval = FALSE)
 ```
-
-## So what's actually going on in the yaml file?
 
 Note: you can use `.yml` or `.yaml` as extension of your file for your workflow. 
 
@@ -40,7 +38,7 @@ A few examples:
 
     `uses`: `actions/checkout@master` or for the first `actions/first-interaction@v1`
 
-### R Syntax options
+## R Syntax options
 
 Change the <customise bits>
 
