--- a/package-ci.Rmd
+++ b/package-ci.Rmd
@@ -1,6 +1,6 @@
 
 
-# Example workflow to set up continuous integration for packages
+# Example workflow to set up continuous integration for packages {#packageci}
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
