--- a/03-understanding_yaml.Rmd
+++ b/03-understanding_yaml.Rmd
@@ -1,4 +1,6 @@
-# So what's actually going on in the yaml file?
+
+
+# So what's actually going on in the yaml file? {#understandingyaml}
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE, eval = FALSE)
