--- a/04-testing_with_renv.Rmd
+++ b/04-testing_with_renv.Rmd
@@ -1,5 +1,6 @@
 
-# Testing with a reproducible environment
+
+# Testing with a reproducible environment {#testingrenv}
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE, cache = FALSE, eval = FALSE)
