--- a/index.Rmd
+++ b/index.Rmd
@@ -15,21 +15,21 @@ rmd_files: ["index.Rmd", "package-ci.Rmd", "understanding_yaml.Rmd", "testing_wi
 
 # Introduction
 
-## What are GitHub actions?
+## What are GitHub Actions?
 
-GitHub actions allow us to trigger automated steps after we launch GitHub interactions such as when we push, pull, submit a pull request, or write an issue. 
+[GitHub actions](https://github.com/features/actions) allow us to trigger automated steps after we launch GitHub interactions such as when we push, pull, submit a pull request, or write an issue. 
 
 For example, there are actions that will automatically trigger:
 
 - continuous integration (CI)
 - messages in response to issues or pull requests
-- rendering/compiling eg. of bookdown, blogdowns etc
+- rendering/compiling e.g. of rmarkdown, bookdown, blogdowns etc
 
 GitHub actions follow the steps designated in a `yaml` file, which we place in the `.github/workflows` folder of the repo. 
 We can add these `yaml` files to our repo either by clicking on a series of steps on GitHub.com, or using wrapper functions provided by the `usethis` package, depending on which actions you which to include.
 We describe both ways here. 
 
-### usethis wrappers 
+### Usethis Wrappers 
 
 [Jim Hester](https://github.com/jimhester) is working to add GitHub action functionalities to the development version of the [`usethis` package](https://usethis.r-lib.org/reference/github_actions.html).
 To use these functions now, you'll need to install the development version, as follows:
@@ -46,7 +46,7 @@ usethis::use_github_action_check_release()
 usethis::use_github_action_check_full()
 ```
 
-More details at in Chapter \@ref(packageci). 
+More details are in chapter \@ref(packageci). 
 
 There are a range of other R actions available in the [r-lib library](https://github.com/r-lib/actions/tree/master/examples). 
 You can add these example `yaml` files using the following function (demonstrated here with the check-release action):
@@ -57,14 +57,14 @@ usethis:::use_github_action('check-release.yaml')
 
 ### Marketplace Actions
 
-There are a huge selection of other actions that you can choose from in the [Marketplace](https://github.com/marketplace?type=actions) that automate not only GitHub processess but also programming-language-specific options.
+There are a huge selection of other actions that you can choose from in the [Marketplace](https://github.com/marketplace?type=actions) that automate not only GitHub processes but also programming-language-specific options.
 To implement these, go to any repo you _own_ and you will find "Actions" on the top menu. 
 Click on "New Workflow" and pick one from the templates provided.
-In some cases the `yaml` will need to be modified. More detail on understanding the `yaml` files can be found at \@ref(understanding_yaml). 
+In some cases the `yaml` will need to be modified. More detail on understanding the `yaml` files can be found in chapter \@ref(understanding-yaml). 
 
 ## Extensions
 
-We experimented with seting up continuous integration with a reproducible environment using `renv` \@ref(testing_with_renev).
+We experimented with setting up continuous integration with a reproducible environment using `renv` in chapter \@ref(testing-with-renev).
 
 ## More information and useful links
 
