chapter for using gh actions to deploy websites

--- a/index.Rmd
+++ b/index.Rmd
@@ -8,7 +8,7 @@ bibliography: [packages.bib]
 biblio-style: apalike
 link-citations: yes
 description: "An introduction to using github actions with R."
-rmd_files: ["index.Rmd", "02-package_ci.Rmd", "03-understanding_yaml.Rmd", "04-testing_with_renv.Rmd", "05-contributions.Rmd"]
+rmd_files: ["index.Rmd", "02-package_ci.Rmd", "03-documentation_actions.Rmd", "04-understanding_yaml.Rmd", "05-testing_with_renv.Rmd", "06-contributions.Rmd"]
 ---
 
 
