--- a/03-documentation_actions.Rmd
+++ b/03-documentation_actions.Rmd
@@ -5,6 +5,8 @@ knitr::opts_chunk$set(echo = TRUE)
 knitr::opts_chunk$set(eval = FALSE)
 ```
 
+## Create gh-pages branch {#ghpages-setup}
+
 In order to serve html pages through GitHub pages the following needs to be done to create an emtpy gh-pages branch to be used to deploy the html pages created by either `pkgdown`, `bookdown`, or `blogdown`
 
 Derived from: https://pkgdown.r-lib.org/reference/deploy_site_github.html
@@ -36,7 +38,9 @@ N.B. The usethis function is not currently exported into the NAMESPACE of `useth
 
 ## Action to deploy a bookdown site
 
-Bookdown yaml
+The following yaml template will run `bookdown::render_book()` on index.Rmd and then deploy the resulting html files onto the gh-pages branch that was created as part of section \@ref(ghpages-setup). It also requires the creation of two GitHub secrets (see section \@ref(secrets)), _GITHUB_PAT_ and _EMAIL_. It assumes that you are compiling the book to an html format and the output directory is `_book`.
+
+Github action for .github/workflow/deploy_bookdown.yml
 ```
 on:
   push:
@@ -47,7 +51,7 @@ on:
        - master
   
 
-name: renderbd
+name: renderbook
 
 jobs:
   bookdown:
@@ -61,8 +65,6 @@ jobs:
         run: Rscript -e 'install.packages(c("rmarkdown","bookdown"))'
       - name: Render Book
         run: Rscript -e 'bookdown::render_book("index.Rmd")'
-      - name: ls
-        run: "ls _book ; pwd"
       - uses: actions/upload-artifact@v1
         with:
           name: _book
@@ -71,6 +73,7 @@ jobs:
 # Need to first create an empty gh-pages branch
 # see https://pkgdown.r-lib.org/reference/deploy_site_github.html
 # and also add secrets for a GITHUB_PAT and EMAIL to the repository
+# gh-action from Cecilapp/GitHub-Pages-deploy
   checkout-and-deploy:
    runs-on: ubuntu-latest
    needs: bookdown
@@ -80,19 +83,18 @@ jobs:
      - name: Download artifact
        uses: actions/download-artifact@v1.0.0
        with:
-        # Artifact name
+         # Artifact name
          name: _book # optional
-    # Destination path
+         # Destination path
          path: _book # optional
-    # artifact source
-    
      - name: Deploy to GitHub Pages
        uses: Cecilapp/GitHub-Pages-deploy@master
        env:
-          EMAIL: ${{ secrets.EMAIL}}               # must be a verified email
+          EMAIL: ${{ secrets.EMAIL }}               # must be a verified email
           GH_TOKEN: ${{ secrets.GITHUB_PAT }} # https://github.com/settings/tokens
           BUILD_DIR: _book/                     # "_site/" by default
     
-```
+``` 
+This action is performed using two jobs, the first renders html, and the second deploys the html to the gh-pages branch so that it can be viewed using the url \<account>.github.io/\<repository_name>. It achieves this by passing an artifact (the `_book` directory) between jobs. Further information about the action yaml files can be found in chapter \@ref(understanding-yaml).
 
 ## Action to deploy blogdown site
