--- a/03-documentation_actions.Rmd
+++ b/03-documentation_actions.Rmd
@@ -38,7 +38,7 @@ N.B. The usethis function is not currently exported into the NAMESPACE of `useth
 
 ## Action to deploy a bookdown site
 
-The following yaml template will run `bookdown::render_book()` on index.Rmd and then deploy the resulting html files onto the gh-pages branch that was created as part of section \@ref(ghpages-setup). It also requires the creation of two GitHub secrets (see section \@ref(secrets)), _GITHUB_PAT_ and _EMAIL_. It assumes that you are compiling the book to an html format and the output directory is `_book`.
+The following yaml template will run `bookdown::render_book()` on index.Rmd and then deploy the resulting html files onto the gh-pages branch that was created as part of section \@ref(ghpages-setup). It also requires the creation of two GitHub secrets (see section \@ref(secrets)), _GITHUB_PAT_ and _EMAIL_. _GITHUB_PAT_ is a personal access token that has at least repo access. The action also assumes that you are compiling the book to an html format and the output directory is `_book`.
 
 Github action for .github/workflow/deploy_bookdown.yml
 ```
