update explanations for check functions

--- a/02-package_ci.Rmd
+++ b/02-package_ci.Rmd
@@ -7,51 +7,81 @@ knitr::opts_chunk$set(echo = TRUE)
 knitr::opts_chunk$set(eval = FALSE)
 ```
 
-This is an example workflow to create a package and use Github actions apply continuous integration to automatically check and test packages upon a git push.
+This is an example workflow to create a package and use GitHub actions to apply continuous integration (CI). 
+CI automatically checks and tests packages upon a `git push`.
 
-Github actions are included in the dev version of `usethis` which can be installed from github using
+Wrappers to implement some GitHub actions are included in the development version of `usethis`, which can be installed from GitHub using:
 
 ```{r}
 # install.packages("devtools")
 devtools::install_github("r-lib/usethis")
 ```
 
-## Package setup and connect with Github
+## Set up package 
 
-### New project, Github first
+### New project, GitHub first
 
-Follow instructions for setting up a new project with [happygitwithr](https://happygitwithr.com/new-github-first.html#new-github-first)
+The CI GitHub actions require a package that is set up with git and GitHub. 
+There are some useful instructions for setting up a new project in the [happygitwithr book](https://happygitwithr.com/new-GitHub-first.html#new-GitHub-first). 
+After setting up the repo in this way, you'll need to add the infrastructure to turn the project into a package. 
+You can do so, for example, with the following command:
 
-Create a package
 ```{r}
-usethis::create_package(path = "path-to-project")
+usethis::create_package(path = "path_to_project")
 ```
 
-### Existing package with github
+### Existing package with GitHub
 
-Make sure that you have GitHub set up with your package.
+If you already have a package you can instead follow either of these instructions to set it up with GitHub,: 
+[Existing project and package, GitHub first](https://happygitwithr.com/existing-GitHub-first.html#existing-GitHub-first) or 
+[Existing project and package, GitHub last](https://happygitwithr.com/existing-GitHub-last.html#existing-GitHub-last). 
 
-[Existing project and package, github first](https://happygitwithr.com/existing-github-first.html#existing-github-first)
-[Existing project and package, github last](https://happygitwithr.com/existing-github-last.html#existing-github-last)
+## Specify GitHub links
 
-Before initiating GitHub actions, you'll need to point to where your GitHub instance is located. The following function populates the URL and BugReports fields of a GitHub-using R package DESCRIPTION file with links to GitHub. If your project is hosted by an enterprise GitHub server you'll need to modify the input arguments. 
+You'll need to point your package to where your GitHub instance is located. 
+The following function populates the URL and BugReports fields of a GitHub-using R package DESCRIPTION file with links to GitHub. 
+If your project is hosted by an enterprise GitHub server this is where you can specify that in the input arguments. 
 
 ```{r}
 usethis::use_github_links()
 ```
 
+If a new GitHub Personal Access Token (PAT) needs to be generated, `usethis` will print some instructions to the console for you to follow. 
+
 ## Actions for continuous integration checks
 
-### release-check
+Both of the following functions create a yaml file in `.github/workflows/` that will trigger a CI check using GitHub actions. 
+They also print the code to copy into your readme to add a badge for CI.
 
-This option checks your work using 
+### CI release check
+
 ```{r}
-usethis::use_github_actions()
+usethis::use_github_action_check_release()
 ```
 
-This creates the required yaml file in `.github/workflows/` for using the GitHub action that runs the release-check for a package on gitGitHubhub and includes the code to add the badge in your readme.
+This option is the more simplified check. It only specifies checking on Mac-OSX and on the most recent version of R. 
+If you are happy with these settings, no alterations to the automatically generated yaml are needed. 
+
+### CI full check
+
+```{r}
+usethis::use_github_action_check_full()
+```
+
+This option sets up a more comprehensive CI check. 
+It tests the package on Linux, Windows, as well as Mac-OSX operating systems. 
+It also queries dependencies, caches previous installations of them, and evaluates test coverage using codecov. 
+To make the file work as is, a token for codecov must be added to your secrets page. 
+We explain how to this below!
+If you are not interested in syncing your package to codecov, this part is not necessary. 
+
+## Adding secrets
+
+
+
 
 Now git add, commit the changes and push them to your repo and the action will run! 
 
+## What next?
 
-
+Read on to Chapter \@ref{#understandingyaml} to get an introduction to the contents of the yaml files. 
