improve documentation of secrets

--- a/04-understanding_yaml.Rmd
+++ b/04-understanding_yaml.Rmd
@@ -77,4 +77,14 @@ jobs:
 
 ## GitHub Secrets {#secrets}
 
-[GitHub secrets](https://help.github.com/en/actions/automating-your-workflow-with-github-actions/creating-and-using-encrypted-secrets) are a way to use values in your yaml that need to remain secret such as credentials, or information you want to keep private. Commonly this would be a GitHub personal access token (_GITHUB_PAT_) that enables the action to perform operations such as _push_. These are set under the repository settings menu.
+[GitHub secrets](https://help.github.com/en/actions/automating-your-workflow-with-github-actions/creating-and-using-encrypted-secrets) are a way to use values in your yaml that need to remain secret such as credentials, or information you want to keep private. Commonly this would be a [GitHub personal access token](https://help.github.com/en/github/authenticating-to-github/creating-a-personal-access-token-for-the-command-line) (_GITHUB_PAT_) that enables the action to perform operations such as _push_. These are set under the repository settings menu.
+
+```{r, eval = TRUE, echo = FALSE}
+knitr::include_graphics("images/add_secret.png")
+```
+
+
+
+### Personal access tokens {#github-pat}
+
+Personal access tokens can be generated with differing levels of authority. To create one for your account got to https://github.com/settings/tokens and click "Generate new token". Then you can copy the value of the token into a secret for your repository so that a GitHub action can be authenticated as you.
